k8s/istio/flask-deployment-istio.yaml
---
### Flask Server Pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-flask-otel-k8s
  labels:
    app: server-flask-otel-k8s
spec:
  selector:
    matchLabels:
      name: server-flask-otel-k8s
  template:
    metadata:
      labels:
        name: server-flask-otel-k8s
    spec:
      containers:
      - name: server-flask-otel-k8s
        image: quay.io/vvydier123/splk-python
        ports:
          - name: http
            containerPort: 5000
        command: ["/bin/sh"]
        args: ["run-server.sh"]
---
### Flask Server Service
apiVersion: v1
kind: Service
metadata:
  name: server-flask-otel-k8s
spec:
  type: NodePort
  selector:
    name: server-flask-otel-k8s
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30001
---
### Istio Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: flask-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
### Istio Virtual Service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-service
spec:
  hosts:
  - "*"
  gateways:
  - flask-gateway
  http:
  - match:
    - uri:
        exact: /echo
    route:
    - destination:
        host: server-flask-otel-k8s
        port:
          number: 5000
